syntax = "proto3";

package net.cydhra.acromantula.proto;

import "google/protobuf/empty.proto";
import "workspace.proto";

option java_multiple_files = true;

service ViewService {
  rpc getViewTypes (google.protobuf.Empty) returns (ViewTypes);

  rpc view (ViewCommand) returns (stream FileChunk);

  rpc exportView (ExportViewCommand) returns (google.protobuf.Empty);
}

message ViewTypes {
  repeated ViewType types = 1;
}

message ViewType {
  string name = 1;
  string generatedType = 2;
}

message ExportViewCommand {
  oneof fileId {
    int32 id = 1;
    string filePath = 2;
  }

  string targetPath = 3;
  string type = 4;
  bool recursive = 5;
  bool includeIncompatible = 6;
}

message ViewCommand {
  oneof fileId {
    int32 id = 1;
    string filePath = 2;
  }

  ViewType type = 3;
  int32 chunkSize = 4;
}